[tool.poetry]
name = "rpg_game"
version = "0.1.1"
description = ""
authors = ["Todd Gerdy <toadimous@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
terminaltables = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
