[tool.poetry]
name = "rpg_game"
version = "0.1.2"
description = ""
authors = ["Todd Gerdy <toadimous@gmail.com>"]
packages = [
#    { include= "rpg_game"},
    { include= "Gear"},
    { include= "Player"},
    { include= "*.py"}
]

[tool.poetry.dependencies]
python = "^3.10"
terminaltables = "^3.1.0"
simple-term-menu = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "Game:start"